--- a/react-simple2/package.json
+++ b/react-simple2/package.json
@@ -16,5 +16,9 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
     "parcel-bundler": "^1.12.5"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "scheduler": "^0.20.2"
   }
 }
