--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/jiaozitang/learn-react/issues"
   },
-  "homepage": "https://github.com/jiaozitang/learn-react#readme"
+  "homepage": "https://github.com/jiaozitang/learn-react#readme",
+  "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@rollup/plugin-node-resolve": "^13.0.0"
+  }
 }
